--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Barebones Chat Application</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -38,7 +38,7 @@
 		<button id="send_button" type="button">Send</button>
 	</form>
 	
-	<script src="script.js"></script>
+	<script src="script.js"></script> <!-- Make sure this is always beneath your HTML code!!! -->
 	
  <!--
   This script places a badge on your repl's full-browser view back to your repl's cover
